# collaborative-zksnark

./: .gitignore  Readme.md
algebra/ec/: Cargo.toml
algebra/ec/src/: group.rs  lib.rs
algebra/ec/src/models/: short_weierstrass_jacobian.rs  twisted_edwards_extended.rs
algebra/ff/: Cargo.toml
algebra/ff/src/: group.rs  lib.rs
algebra/ff/src/fields/: arithmetic.rs  macros.rs  mod.rs  poly_stub.rs
algebra/ff/src/fields/models/: cubic_extension.rs  mod.rs  quadratic_extension.rs
algebra/poly/: Cargo.toml
algebra/poly-benches/: Cargo.toml
algebra/poly/src/: lib.rs  reveal.rs
algebra/poly/src/domain/: mod.rs
algebra/poly/src/domain/radix2/: mod.rs
algebra/poly/src/evaluations/univariate/: mod.rs
algebra/serialize/: Cargo.toml
algebra/serialize/src/: lib.rs
algebra/test-curves/: Cargo.toml
algebra/test-templates/: Cargo.toml
algebra/test-templates/src/: fields.rs
crypto-primitives/: Cargo.toml
crypto-primitives/src/: lib.rs
crypto-primitives/src/signature/schnorr/: mod.rs
curves/bls12_377/: Cargo.toml
curves/bls12_377/src/: lib.rs
curves/bls12_377/src/fields/: fr.rs
curves/bls12_381/: Cargo.toml
curves/bls12_381/src/: lib.rs
curves/bls12_381/src/fields/: fr.rs
curves/bn254/: Cargo.toml
curves/bn254/src/: lib.rs
curves/bw6_761/: Cargo.toml
curves/bw6_761/src/: lib.rs
curves/cp6_782/: Cargo.toml
curves/cp6_782/src/: lib.rs
curves/curve-benches/: Cargo.toml
curves/curve-constraint-tests/: Cargo.toml
curves/ed_on_bls12_377/: Cargo.toml
curves/ed_on_bls12_377/src/: lib.rs
curves/ed_on_bls12_381/: Cargo.toml
curves/ed_on_bls12_381/src/: lib.rs
curves/ed_on_bn254/: Cargo.toml
curves/ed_on_bn254/src/: lib.rs
curves/ed_on_bw6_761/: Cargo.toml
curves/ed_on_bw6_761/src/: lib.rs
curves/ed_on_cp6_782/: Cargo.toml
curves/ed_on_cp6_782/src/: lib.rs
curves/ed_on_mnt4_298/: Cargo.toml
curves/ed_on_mnt4_298/src/: lib.rs
curves/ed_on_mnt4_753/: Cargo.toml
curves/ed_on_mnt4_753/src/: lib.rs
curves/mnt4_298/: Cargo.toml
curves/mnt4_298/src/: lib.rs
curves/mnt4_753/: Cargo.toml
curves/mnt4_753/src/: lib.rs
curves/mnt6_298/: Cargo.toml
curves/mnt6_298/src/: lib.rs
curves/mnt6_753/: Cargo.toml
curves/mnt6_753/src/: lib.rs
curves/pallas/: Cargo.toml
curves/pallas/src/: lib.rs
curves/vesta/: Cargo.toml
curves/vesta/src/: lib.rs
groth16/: Cargo.toml
groth16/src/: data_structures.rs  generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  reveal.rs  test.rs  verifier.rs
marlin/: Cargo.toml
marlin/src/: data_structures.rs  lib.rs  reveal.rs
marlin/src/ahp/: constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
mpc-algebra/: Cargo.toml  test.zsh
mpc-algebra/analysis/data-collection/: exp.zsh
mpc-algebra/data/: 3
mpc-algebra/examples/: gsz20.rs
mpc-algebra/scripts/: mpc.zsh
mpc-algebra/src/: channel.rs  client.rs  com.rs  lib.rs  mul_group.rs  pairing.rs  proof.rs  reveal.rs
mpc-algebra/src/channel/: multi.rs
mpc-algebra/src/mpc/: channel.rs  groth.rs  mod.rs  poly.rs  silly.rs
mpc-algebra/src/mpc/groth/: prover.rs  r1cs_to_qap.rs
mpc-algebra/src/mpc/marlin/: data_structures.rs  error.rs
mpc-algebra/src/mpc/marlin/ahp/: constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
mpc-algebra/src/mpc/poly/: pc.rs
mpc-algebra/src/share/: add.rs  field.rs  group.rs  mod.rs  msm.rs  pairing.rs  spdz.rs
mpc-algebra/src/share/gsz20/: mod.rs
mpc-algebra/src/ss/: com.rs  group.rs  mod.rs
mpc-algebra/src/ss/share/: add.rs  field.rs  group.rs  mod.rs  msm.rs  pairing.rs  spdz.rs
mpc-algebra/src/ss/share/gsz20/: mod.rs
mpc-algebra/src/ss/wire/: field.rs  group.rs  macros.rs  mod.rs  pairing.rs
mpc-algebra/src/wire/: field.rs  group.rs  macros.rs  mod.rs  pairing.rs
mpc-net/: Cargo.toml  test.zsh
mpc-net/examples/: broadcast.rs
mpc-net/src/: lib.rs  multi.rs  two.rs
mpc-plonk/: Cargo.toml  README.md
mpc-plonk/src/: data_structures.rs  lib.rs  reveal.rs  rng.rs  util.rs
mpc-plonk/src/relations/: flat.rs  mod.rs  structured.rs
mpc-snarks/: .gitignore  Cargo.toml  Makefile  artifact_eval.md  artifact_eval.tex  bench_test.zsh  out  test.zsh
mpc-snarks/analysis/collect/: 2pc_lan.zsh  9pc.zsh  Npc.zsh  artifact_eval.zsh  bad_net.zsh  coord-remote-exp.zsh  create_vms.zsh  delete_vms.zsh  exp.zsh  weak_machines.zsh
mpc-snarks/analysis/data/: 6pc.csv  Npc.csv  bad_net.csv  exp.csv  groth16.csv  lan.csv  mpc.csv  partial.csv  weak.csv  weak_1_20.csv
mpc-snarks/analysis/data-collection/: coord-remote-exp.zsh  exp.zsh  remote-exp-out.zsh  remote-exp.zsh
mpc-snarks/analysis/lib/: runner.py
mpc-snarks/analysis/plotting/: Npc.R  artifact_eval.zsh  bad_net.R  exp.R  groth16.R  plot.R  small.R
mpc-snarks/artifact_appendix/: ae_V20220119.aux  ae_V20220119.fdb_latexmk  ae_V20220119.fls  ae_V20220119.out  ae_V20220119.tex
mpc-snarks/data/: 2  3  4  mahimahi_in  mahimahi_out
mpc-snarks/scripts/: bandwidth_bench.zsh  bench.zsh  build-debian-10.zsh  flame.zsh  local.zsh  mpc.zsh  print.zsh  remote_bench.zsh
mpc-snarks/src/: client.rs  groth.rs  marlin.rs  pc.rs  plonk.rs  poly.rs  proof.rs  reveal.rs
mpc-snarks/src/groth/: prover.rs  r1cs_to_qap.rs
mpc-snarks/src/poly/: pc.rs
mpc-trait/: Cargo.toml
mpc-trait/src/: lib.rs
nonnative/: Cargo.toml
nonnative/src/: lib.rs
poly-commit/: Cargo.toml
poly-commit/src/: data_structures.rs  lib.rs  reveal.rs
poly-commit/src/ipa_pc/: data_structures.rs  mod.rs
poly-commit/src/kzg10/: data_structures.rs  mod.rs
poly-commit/src/marlin/: mod.rs
poly-commit/src/marlin/marlin_pst13_pc/: mod.rs
poly-commit/src/multilinear_pc/: mod.rs
poly-commit/src/sonic_pc/: mod.rs
r1cs-std/: Cargo.toml
r1cs-std/src/: lib.rs
r1cs-std/src/groups/curves/twisted_edwards/: mod.rs
snark/relations/: Cargo.toml
snark/relations/src/: lib.rs
snark/relations/src/r1cs/: constraint_system.rs  trace.rs
snark/snark/: Cargo.toml
snark/snark/src/: lib.rs
utils/: CHANGELOG.md  Cargo.toml
utils/.github/workflows/: ci.yml
utils/src/: lib.rs  rand_helper.rs
(+3 files in other folders)
