[package]
name = "mpc-algebra"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

[dependencies]
ark-ff = { path = "../algebra/ff", version = "0.2.0", default-features = false }
ark-poly = { path = "../algebra/poly", version = "0.2.0", default-features = false }
ark-bls12-377 = { path = "../curves/bls12_377", version = "0.2.0", default-features = false, features = ["curve"] }
ark-ec = { path = "../algebra/ec", version = "0.2.0", default-features = false }
#ark-poly = { path = "../algebra/poly", version = "0.2.0", default-features = false }
ark-relations = { path = "../snark/relations", version = "0.2.0", default-features = false }
ark-serialize = { path = "../algebra/serialize", version = "0.2.0", default-features = false, features = [ "derive" ] }
ark-std = { path = "../utils", version = "0.2.0", default-features = false, features = [ "print-trace", "std" ] }
#ark-groth16 = { path = "../groth16", version = "0.2.0", default-features = false, features = [ "std" ] }
#ark-marlin = { path = "../marlin", version = "0.2.0", default-features = false, features = [ "std" ] }
#ark-poly-commit = { path = "../poly-commit", version = "0.2.0", default-features = false, features = [ "std" ] }
lazy_static = "1"
once_cell = "1.8"
derivative = { version = "2.0", features = ["use_core"]}
log = {version = "0.4"}
digest = { version = "0.9" }

rand = { version = "0.7", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
mpc-net = { path = "../mpc-net" }
mpc-trait = { path = "../mpc-trait" }

env_logger = "0.8"
structopt = "0.3"
clap = "2"
merlin = "3"
sha2 = "0.9"
blake2 = "0.9"
