[package]
name = "ark-r1cs-std"
version = "0.2.0"
authors = [ "arkworks contributors" ]
description = "A standard library for constraint system gadgets"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/r1cs-std"
documentation = "https://docs.rs/ark-r1cs-std/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "r1cs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
ark-ff = { path = "../algebra/ff", version = "^0.2.0", default-features = false }
ark-ec = { path = "../algebra/ec", version = "^0.2.0", default-features = false }
ark-std = { path = "../utils", default-features = false }
ark-relations = { path = "../snark/relations", version = "^0.2.0", default-features = false }

derivative = { version = "2", features = ["use_core"] }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
num-bigint = {version = "0.4", default-features = false }
num-traits = {version = "0.2", default-features = false }

[dev-dependencies]
ark-test-curves = { version = "^0.2.0", path = "../algebra/test-curves", default-features = false, features = ["bls12_381_scalar_field", "mnt4_753_scalar_field"] }
ark-poly = { version = "^0.2.0", path = "../algebra/poly", default-features = false }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-relations/std", "ark-std/std", "num-bigint/std" ]
parallel = [ "std", "ark-ff/parallel" ]
