[package]
name = "ark-std"
version = "0.2.0"
authors = [ "arkworks contributors" ]
description = "A library for no_std compatibility"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/utils"
documentation = "https://docs.rs/ark-std/"
keywords = [ "no_std" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
rand = { version = "0.7", default-features = false }
# rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rand_xorshift = "0.2"
# rand_xorshift = "0.3"
rayon = { version = "1", optional = true }

colored = { version = "2", optional = true }

mpc-trait = { path = "../mpc-trait" }


[features]
default = [ "std" ]
std = []
parallel = [ "rayon", "std" ]
print-trace = [ "std", "colored" ]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
